--- a/sass/components/_collapsible.sass
+++ b/sass/components/_collapsible.sass
@@ -20,7 +20,7 @@
         background-color: #F5F5F5
 
 .collapse__container
-    overflow: hidden
+    overflow-y: clip
     transition: max-height 350ms ease
 
     @media (prefers-reduced-motion: reduce)
